--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "webpack": "webpack-dev-server --port 3000 --config Examples/LandingPage/web/webpack.config.dev.babel.js --inline --hot --colors",
+    "web": "webpack-dev-server --port 3000 --config Examples/LandingPage/web/webpack.config.dev.babel.js --inline --hot --colors",
     "clean": "gulp clean",
     "cleanse": "gulp cleanse",
     "dev": "gulp dev",
@@ -23,7 +23,7 @@
   "dependencies": {
     "mudash": "0.0.11",
     "node-emoji": "^1.4.1",
-    "react-native-web": "0.0.49",
+    "react-native-web": "0.0.51",
     "recompose": "^0.20.2"
   },
   "devDependencies": {
@@ -45,7 +45,8 @@
     "html-webpack-plugin": "^2.24.1",
     "json-loader": "^0.5.4",
     "react": "15.3.2",
-    "react-native": "^0.37.0",
+    "react-dom": "15.3.2",
+    "react-native": "0.36.1",
     "react-omni-webpack-plugin": "0.0.1",
     "react-test-renderer": "^15.3.2",
     "url-loader": "^0.5.7",
