--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "15.3.2",
     "react-native": "0.36.1",
     "react-omni-webpack-plugin": "0.0.1",
+    "react-router": "^4.0.0-alpha.6",
     "react-test-renderer": "^15.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
